--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -59,5 +59,5 @@ html
     main.container.mx-auto.mt-8.mb-60
       = yield
     footer.container.mx-auto.text-center.mb-8
-      a.hover:bg-transparent href="" onclick="window.scrollTo({top: 0}); return false;" class="link"
+      a.no-underline.hover:bg-transparent href="" onclick="window.scrollTo({top: 0}); return false;" class="link"
         i.icn.text-3xl.text-gray-500 😸
