--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -2,16 +2,16 @@
   = render "_shared/notice-err", model: purchase
 
   .stimulus data-controller="purchase-edition"
-    = form.label :product
+    = form.label :product_id
     .stimulus#purchase-product-select
       = form.collection_select :product_id, Product.all, :id, :full_title_with_shop_id, { class: "select" }, data: { controller: "slim-select", action: "change->purchase-edition#change" }
 
     .stimulus#purchase-edition-select data-purchase-edition-target="select"
       - if purchase.product&.editions.present?
-        = form.label :edition
+        = form.label :edition_id
         = form.collection_select :edition_id, purchase.product.editions_with_title, :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
 
-  = form.label :supplier
+  = form.label :supplier_id
   = form.collection_select :supplier_id, Supplier.all.order(title: :asc), :id, :title
 
   = form.label :order_reference
@@ -29,7 +29,7 @@
       = payment_builder.number_field :value, step: :any
 
     - if Warehouse.any?
-      = form.label :warehouse, "Initial Warehouse"
+      = form.label :warehouse_id, "Initial Warehouse"
       = form.collection_select :warehouse_id, Warehouse.all.order(name: :asc), :id, :name, {selected: @default_warehouse_id}
 
   = form.submit
