--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./slim-select";
 @import "./navigation";
 @import "./tables";
 @import "./pagination";
@@ -29,13 +30,34 @@
     @apply cursor-pointer font-medium no-underline inline-flex items-center justify-center gap-2 px-2 py-2 rounded-sm bg-gray-50 hover:bg-gray-100 border border-gray-200/50 transition-all duration-150;
   }
 
-  select:not([multiple], [size]) {
-    @apply appearance-none w-fit pl-3 pr-10 py-2 cursor-pointer border-1 border-gray-200 hover:bg-gray-100 rounded-sm;
+  input[type="submit"] {
+    @apply bg-blue-600 hover:bg-blue-700 text-white rounded-full px-3 w-fit;
+  }
 
+  label {
+    @apply block font-medium text-gray-900 mt-6 mb-2;
+  }
+
+  select,
+  input,
+  .ss-main {
+    @apply appearance-none w-full pl-3 pr-10 py-2 cursor-pointer border-1 border-gray-200 rounded-sm;
+  }
+
+  select:not([multiple], [size]),
+  .ss-main {
     background-image: var(--icon-chevron);
     background-position: center right 0.75rem;
     background-size: 1rem auto;
     background-repeat: no-repeat;
+  }
+
+  table select:not([multiple], [size]) {
+    @apply hover:bg-gray-100;
+  }
+
+  .ss-main .ss-values .ss-single {
+    @apply ml-0;
   }
 }
 
