--- a/app/views/_shared/_nav-new.html.slim
+++ b/app/views/_shared/_nav-new.html.slim
@@ -1,6 +1,5 @@
 header.flex.justify-between.items-center.mb-8
   h1 New #{model.model_name.name.titleize.singularize}
-  menu.pt-2
-    li
-      - if defined?(custom_link) && custom_link.present?
-        = custom_link
+  - if defined?(custom_link) && custom_link.present?
+    menu.pt-2
+      li = custom_link
