--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -27,7 +27,7 @@
   input[type="submit"],
   input[type="button"],
   button {
-    @apply cursor-pointer font-medium no-underline inline-flex items-center justify-center gap-2 px-2 py-2 rounded-sm bg-gray-50 hover:bg-gray-100 border border-gray-200/50 transition-all duration-150;
+    @apply cursor-pointer font-medium no-underline inline-flex items-center justify-center gap-2 px-2 py-2 rounded-sm bg-gray-100 hover:bg-gray-200 transition-all duration-150;
   }
 
   input[type="submit"] {
@@ -41,7 +41,7 @@
   select,
   input,
   .ss-main {
-    @apply appearance-none w-full pl-3 pr-10 py-2 cursor-pointer border-1 border-gray-200 rounded-sm;
+    @apply appearance-none w-full pl-3 pr-10 py-2 cursor-pointer border-1 border-gray-300/80 rounded-sm;
   }
 
   select:not([multiple], [size]),
@@ -94,7 +94,7 @@
   }
 
   .btn-rounded {
-    @apply rounded-full px-3 border-gray-200/60;
+    @apply rounded-full px-3 border-gray-200;
   }
 
   a.link {
@@ -104,7 +104,7 @@
 
 @layer components {
   .section-border-base {
-    @apply border border-gray-100 rounded-xl;
+    @apply border border-gray-200/80 rounded-xl;
   }
 
   .section-wide {
