--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -30,6 +30,10 @@
     @apply cursor-pointer font-medium no-underline inline-flex items-center justify-center gap-2 px-2 py-2 rounded-sm bg-gray-100 hover:bg-gray-200 transition-all duration-150;
   }
 
+  input[type="file"] {
+    @apply border-0 -ml-3 file:cursor-pointer file:bg-gray-100 file:text-black file:py-2 file:mr-4 file:font-semibold file:px-3 file:rounded-full file:hover:bg-gray-200;
+  }
+
   input[type="submit"] {
     @apply bg-blue-600 hover:bg-blue-700 text-white rounded-full px-3 w-fit;
   }
