--- a/app/assets/tailwind/navigation.css
+++ b/app/assets/tailwind/navigation.css
@@ -29,7 +29,7 @@
 
   /* Dropdown container */
   nav[role="navigation-dropdown"] ul {
-    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pr-4 pb-7 pl-4 bg-white border border-gray-200 rounded-lg opacity-0 invisible transition-all duration-150;
+    @apply flex flex-col items-start absolute right-0 top-full w-40 pt-5 pr-4 pb-7 pl-4 bg-white border border-gray-200 rounded-lg opacity-0 invisible transition-all duration-150 z-228;
   }
 
   nav[role="navigation-dropdown"]:hover ul {
