--- a/app/views/colors/new.html.slim
+++ b/app/views/colors/new.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @color
 = render "_shared/nav-new", model: @color
 
-main
-  = render "form", color: @color
+= render "form", color: @color
