--- a/app/views/customers/new.html.slim
+++ b/app/views/customers/new.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @customer
 = render "_shared/nav-new", model: @customer
 
-main
-  = render "form", customer: @customer
+= render "form", customer: @customer
