--- a/app/views/franchises/new.html.slim
+++ b/app/views/franchises/new.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @franchise
 = render "_shared/nav-new", model: @franchise
 
-main
-  = render "form", franchise: @franchise
+= render "form", franchise: @franchise
