--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @product
 = render "_shared/nav-new", model: @product
 
-main
-  = render "form", product: @product
+= render "form", product: @product
