--- a/app/views/sales/new.html.slim
+++ b/app/views/sales/new.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @sale
 = render "_shared/nav-new", model: @sale
 
-main
-  = render "form", sale: @sale
+= render "form", sale: @sale
