--- a/app/views/sizes/_form.html.slim
+++ b/app/views/sizes/_form.html.slim
@@ -1,5 +1,4 @@
 = form_with(model: size) do |form|
-  = render "_shared/notice-err", model: size
   = form.label :value
   = form.text_field :value 
-  = form.submit
+  = form_submit_for(size, form)
