--- a/app/views/brands/_form.html.slim
+++ b/app/views/brands/_form.html.slim
@@ -1,5 +1,4 @@
 = form_with(model: brand) do |form|
-  = render "_shared/notice-err", model: brand
   = form.label :title
   = form.text_field :title 
-  = form.submit
+  = form_submit_for(brand, form)
