--- a/app/views/brands/new.html.slim
+++ b/app/views/brands/new.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @brand
 = render "_shared/nav-new", model: @brand
 
-main
-  = render "form", brand: @brand
+= render "form", brand: @brand
