--- a/app/views/shapes/_form.html.slim
+++ b/app/views/shapes/_form.html.slim
@@ -1,5 +1,4 @@
 = form_with(model: shape) do |form|
-  = render "_shared/notice-err", model: shape
   = form.label :title
   = form.text_field :title 
-  = form.submit
+  = form_submit_for(shape, form)
