--- a/app/views/shapes/new.html.slim
+++ b/app/views/shapes/new.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @shape
 = render "_shared/nav-new", model: @shape
 
-main
-  = render "form", shape: @shape
+= render "form", shape: @shape
