Add shared form submit partial and standardize forms

--- a/app/views/sizes/edit.html.slim
+++ b/app/views/sizes/edit.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @size
 = render "_shared/nav-edit", model: @size
 
-main
-  = render "form", size: @size
+= render "form", size: @size
