--- a/app/views/suppliers/edit.html.slim
+++ b/app/views/suppliers/edit.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @supplier
 = render "_shared/nav-edit", model: @supplier
 
-main
-  = render "form", supplier: @supplier
+= render "form", supplier: @supplier
