--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,5 +1,4 @@
 = form_with(model: user) do |form|
-  = render "_shared/notice-err", model: user
   = form.label :email_address
   = form.text_field :email_address 
   = form.label :first_name
@@ -9,4 +8,4 @@
   - if !user.admin?
     = form.label :role
     = form.select :role, User.role_options_for_select, { prompt: "Select role" }
-  = form.submit
+  = form_submit_for(user, form)
