--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @user
 = render "_shared/nav-edit", model: @user
 
-main
-  = render "form", user: @user
+= render "form", user: @user
