--- a/app/views/versions/_form.html.slim
+++ b/app/views/versions/_form.html.slim
@@ -1,5 +1,4 @@
 = form_with(model: version) do |form|
-  = render "_shared/notice-err", model: version
   = form.label :value
   = form.text_field :value 
-  = form.submit
+  = form_submit_for(version, form)
