--- a/app/views/suppliers/_form.html.slim
+++ b/app/views/suppliers/_form.html.slim
@@ -1,5 +1,4 @@
 = form_with(model: supplier) do |form|
-  = render "_shared/notice-err", model: supplier
   = form.label :title
   = form.text_field :title 
-  = form.submit
+  = form_submit_for(supplier, form)
