--- a/app/views/versions/new.html.slim
+++ b/app/views/versions/new.html.slim
@@ -1,4 +1,4 @@
+= render "_shared/notice-err", model: @version
 = render "_shared/nav-new", model: @version
 
-main
-  = render "form", version: @version
+= render "form", version: @version
