--- a/app/views/sales/_product_fields.html.slim
+++ b/app/views/sales/_product_fields.html.slim
@@ -1,8 +1,8 @@
 - if product.present?
-  .sales-form__product_fields
+  .sales-form__product_fields.mb-3.max-w-1/3.border.border-gray-200.rounded-xl.p-4.pb-8
     = f.hidden_field :product_id
-    h6 = product.full_title
-    = f.label :qty
+    h6.mb-6.mt-2 = product.full_title
+    = f.label :qty, "Amount"
     = f.number_field :qty
     = f.label :price
     = f.number_field :price, value: format_money(f.object.price), step: :any
