--- a/app/views/customers/index.html.slim
+++ b/app/views/customers/index.html.slim
@@ -14,7 +14,7 @@
           th Full name
           th Email
           th Phone
-          th Actions
+          th.text-right Actions
       tbody
         = render @customers
   - else 
