--- a/app/views/franchises/index.html.slim
+++ b/app/views/franchises/index.html.slim
@@ -10,6 +10,6 @@
         th Title
         th Created
         th Updated
-        th Actions
+        th.text-right Actions
     tbody
       = render @franchises
