--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -17,7 +17,7 @@ section.section-border-base.section-wide
             <span>Full name</span> <span class="font-normal text-sm pl-4">+ Editions</span>
           th Woo ID
           th Shopify ID
-          th.text-center Actions
+          th.text-right Actions
       tbody
         = render @products
     .pagination-bottom = paginate @products
