--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -17,7 +17,7 @@ section.section-border-base.section-wide data-controller="table move-items"
           th.text-right Price, $
           th.text-right Total, $
           th.text-right Debt, $
-          th Actions
+          th.text-right Actions
       tbody
         = render @purchases, cache: true
     .pagination-bottom = paginate @purchases
