--- a/app/views/shapes/index.html.slim
+++ b/app/views/shapes/index.html.slim
@@ -9,6 +9,6 @@
         th Title
         th Created
         th Updated
-        th Actions
+        th.text-right Actions
     tbody
       = render @shapes
