--- a/app/views/versions/index.html.slim
+++ b/app/views/versions/index.html.slim
@@ -9,6 +9,6 @@
         th Value
         th Created
         th Updated
-        th Actions
+        th.text-right Actions
     tbody
       = render @versions
