--- a/app/views/colors/index.html.slim
+++ b/app/views/colors/index.html.slim
@@ -10,6 +10,6 @@
         th Value
         th Created
         th Updated
-        th Actions
+        th.text-right Actions
     tbody
       = render @colors
