--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -12,6 +12,6 @@
         th Role
         th Created
         th Updated
-        th Actions
+        th.text-right Actions
     tbody
       = render @users
